--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 
 html{
-    font-size:15px;
+    font-size:14px;
     color:#1f1f29
 }
 body{
@@ -15,15 +15,6 @@ h1,h2,h3,h4,h5,h6{
     font-weight:600;
     color:#222222;
 }
-
-#pic{
-    height:40px;
-}
-#navbar{
-    margin:0;
-    padding:8px;
-
-}
 h1{
     text-align: center;
     font-size:2.5rem;
@@ -31,13 +22,6 @@ h1{
 h2{
     text-align: center;
     font-size:2rem; 
-}
-h3{
-    
-    margin-top:0;
-    margin-bottom:4px;
-    padding-bottom:4px;
-    font-size:1.75rem;
 }
 h4{
     font-size:1.5rem;
@@ -48,6 +32,58 @@ h5{
 h6{
     font-size:1rem;
 }
+a{
+    text-decoration: none;
+    color:#60a5fa;
+}
+a:hover,a:focus{
+    color:#1d4ed8
+}
+#navbar{
+    margin:0;
+    padding:8px;
+
+}
+#pic{
+    height:40px;
+}
+
+@media screen and (min-width:576px){
+   
+}
+
+@media screen and (min-width:768px){
+    html{
+        font-size:16px;
+    } 
+    #picwithname{
+        height:40px;
+    }
+}
+
+@media screen and (min-width:990px){
+    html{
+        font-size:20px;
+    }  
+}
+
+
+
+
+/*
+
+
+
+
+
+h3{
+    
+    margin-top:0;
+    margin-bottom:4px;
+    padding-bottom:4px;
+    font-size:1.75rem;
+}
+
 #logo{
    object-fit: cover;
    width:100%;
@@ -136,13 +172,7 @@ tr:hover {background-color: #D6EEEE;}
     padding:10px;
     margin:0 auto;
 }
-a{
-    text-decoration: none;
-    color:#60a5fa;
-}
-a:hover,a:focus{
-    color:#1d4ed8
-}
+
 #ct2{
     width:50%;
     padding:10px;   
@@ -178,3 +208,4 @@ a:hover,a:focus{
 #table{
     border:1px solid black;
 }
+    */
