--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ h1,h2,h3,h4,h5,h6{
 h1{
     text-align: center;
     font-size:2.5rem;
+    margin:8px 0px;
 }
 h2{
     text-align: center;
@@ -44,50 +45,46 @@ a:hover,a:focus{
     padding:8px;
 
 }
-#pic{
+#pic,#picwithname{
     height:40px;
 }
-
-@media screen and (min-width:576px){
+#picwithname{
+    display:none;
+}
+#pic{
+    display:block;
+}
+#logo{
+    object-fit: cover;
+    width:100%;
+    height:150px;
+ }
+ #about{
    
+    max-width:500px ;
+    margin:0 auto;
+    font-size:1rem;
+}
+#ct{
+   
+    padding:10px;
+    margin:0 auto;
 }
 
-@media screen and (min-width:768px){
-    html{
-        font-size:16px;
-    } 
-    #picwithname{
-        height:40px;
-    }
+#ct2{
+    padding:10px;   
 }
-
-@media screen and (min-width:990px){
-    html{
-        font-size:20px;
-    }  
+#team{
+    border:2px;
+    object-fit: cover;
+    width:100%;
 }
-
-
-
-
-/*
-
-
-
-
-
 h3{
     
     margin-top:0;
     margin-bottom:4px;
     padding-bottom:4px;
     font-size:1.75rem;
-}
-
-#logo{
-   object-fit: cover;
-   width:100%;
-    height:500px;
 }
 #application{
     max-width:800px ;
@@ -129,6 +126,26 @@ h3{
     border-radius:5px;
     border:1px solid gray;
 }
+
+#footer{
+   
+    background-color:#FAFAFA;
+    padding:8px;
+    margin:4px,auto;
+    text-align:center;
+}
+#footer-links{
+    list-style: none;
+
+}
+#footer-links li{
+   
+    padding-right:16px;
+}
+#copyright{
+    color:grey;
+    font-size:0.85rem;
+}
 #job{
     padding:0 8px;
     margin:0 auto;
@@ -139,12 +156,7 @@ h3{
     border:1px solid gray;
     border-collapse: collapse;
 }
-#about{
-    display:flex;
-    max-width:800px ;
-    margin:0 auto;
-    font-size:1rem;
-}
+
 
 .jobs-header-row th{
     border:1px solid gray;
@@ -167,45 +179,82 @@ tr:hover {background-color: #D6EEEE;}
 }
 
 
-#ct{
-    width:50%;
-    padding:10px;
-    margin:0 auto;
-}
 
-#ct2{
-    width:50%;
-    padding:10px;   
-}
-#team{
-    border:2px;
-    object-fit: cover;
-}
 .group{
     color:gray;
   margin-bottom:16px;
 }
 
-#footer{
-   
-    background-color:#FAFAFA;
-    padding:8px;
-    margin:4px,auto;
-    text-align:center;
-}
-#footer-links{
-    list-style: none;
-
-}
-#footer-links li{
-    display:inline;
-    padding-right:16px;
-}
-#copyright{
-    color:grey;
-    font-size:0.85rem;
-}
 #table{
     border:1px solid black;
 }
+@media screen and (min-width:576px){
+    #picwithname{
+        display:block;
+    }
+    #pic{
+        display:none;
+    }
+    #logo{
+        height:200px;
+    }
+    h1{
+        margin:12px 0px;
+    }
+    #about{
+        max-width:600px;
+    }
+ 
+}
+
+@media screen and (min-width:768px){
+    html{
+        font-size:16px;
+    } 
+    #footer-links li{
+        display:inline;
+    }
+    #logo{
+        height:250px;
+    }
+    #about{
+        display:flex;
+        max-width:800px;
+    }
+    h1{
+        margin:16px 0px;
+    }
+    #ct,#ct2{
+        width:50%;
+    }
+    #team{
+        width:100%;
+        height:100%;
+    }
+  
+
+}
+
+@media screen and (min-width:990px){
+    html{
+        font-size:20px;
+    }  
+    #logo{
+        height:300px;
+    }
+}
+
+
+
+
+/*
+
+
+
+
+
+
+
+
+
     */
